un-hacky-fixed the stuck scrollbar issue

--- a/DEV/SASS/_mobile.scss
+++ b/DEV/SASS/_mobile.scss
@@ -525,9 +525,6 @@ pre > code {
   font-size: .8em;
   color: #555;
   overflow: auto;
-  &::-webkit-scrollbar {
-    display: none;
-  }
 }
 
 pre {
